// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiStat is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiStat ouiStat--leftAligned testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props accent is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title ouiStat__title--accent"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props center is rendered 1`] = `
<div
  class="ouiStat ouiStat--centerAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props danger is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title ouiStat__title--danger"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props default is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props hexcode colors are rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title"
    style="color:#EB1919"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props l is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props left is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props loading is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiStat ouiStat--leftAligned testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title ouiStat__title-isLoading"
  >
    --
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    Statistic is loading
  </p>
</div>
`;

exports[`OuiStat props m is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--medium ouiStat__title"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props primary is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title ouiStat__title--primary"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props render with custom description element 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <div
      aria-hidden="true"
    >
      <div>
        description
      </div>
    </div>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title"
    style="color:#EB1919"
  >
    title
  </p>
</div>
`;

exports[`OuiStat props render with custom title element 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <div
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title"
  >
    <div>
      title
    </div>
  </div>
</div>
`;

exports[`OuiStat props right is rendered 1`] = `
<div
  class="ouiStat ouiStat--rightAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props s is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--small ouiStat__title"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props secondary is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title ouiStat__title--secondary"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props success is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title ouiStat__title--success"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props subdued is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title ouiStat__title--subdued"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props title and description are reversed 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--large ouiStat__title"
  >
    title
  </p>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    class="ouiScreenReaderOnly"
  >
    title description
  </p>
</div>
`;

exports[`OuiStat props xs is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--xsmall ouiStat__title"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props xxs is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--xxsmall ouiStat__title"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;

exports[`OuiStat props xxxs is rendered 1`] = `
<div
  class="ouiStat ouiStat--leftAligned"
>
  <div
    class="ouiText ouiText--small ouiStat__description"
  >
    <p
      aria-hidden="true"
    >
      description
    </p>
  </div>
  <p
    aria-hidden="true"
    class="ouiTitle ouiTitle--xxxsmall ouiStat__title"
  >
    title
  </p>
  <p
    class="ouiScreenReaderOnly"
  >
    description title
  </p>
</div>
`;
